bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (aSmile == true && bSmile == true){
  ^